tests/samples/positive/types/opaque_pointer.ax
module opaque_pointer;

extern c {
    opaque struct File;
    @name("puts")
    fn puts(s: *const u8) -> i32;
}

fn accept(file: *mut File) -> i32 {
    return 0;
}

fn main() -> i32 {
    puts(c"opaque pointer");
    return 0;
}
