tests/samples/negative/pointers/opaque_value.ax
module opaque_value;

extern c {
    opaque struct File;
}

fn bad(file: File) -> i32 {
    return 0;
}

fn main() -> i32 {
    return 0;
}
